# rntuple_test

./: CMakeLists.txt  README.md  SoA.md  env.conf  getdunehdf5.cc  getdunerntuple.cc  load_perlmutter.sh  readdunerntuple.cc  runwithdarshan.sh  setup_atlas.sh  test_SoA.cu  test_rntuple.cxx  test_simple_SoA.cu  test_simple_soa.cc  test_tree.cxx
include/: DuneDataModel.h  GenerateDataInHDF5.h  GenerateDataInRntuple.h  GenerateData_orig.h  HDFCxx.h  Macros.cuh  Memory.cuh  Memory.icc  SoALayout.h  dunedatamodel_def.xml  dunesoacommon.xml  dunesoalaymodel_def.xml  files.txt  macros.h  soa.h  val.h
include/.ipynb_checkpoints/: DUNEDataModel-checkpoint.h  DataModel-checkpoint.h  Datamodel-checkpoint.h  DuneSoADataModel-checkpoint.h  GenerateData-checkpoint.h  RNTupleDict-checkpoint.h  SoACommon-checkpoint.h  SoAView-checkpoint.h  dunesoamodel_def-checkpoint.xml
src/: GenerateDataInHDF5.cc  files.txt
src/.ipynb_checkpoints/: DuneDataModel-checkpoint.cc  DuneSoaDataModel-checkpoint.cc  GenerateDataInRntuple-checkpoint.cc  getdunehdf5-checkpoint.cc
